[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/arrows-x-1-idle-1-black.png" type="Texture" id=1]
[ext_resource path="res://scenes/TouchControls.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 50, 50, 0, 100 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 50, 50, 100, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 50, 0, 0, 50, 50, 100 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 50, 50, 0, 100, 50 )

[node name="TouchControls" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( -52, -71 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="UpButton" type="TouchScreenButton" parent="."]
position = Vector2( -69, -54 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 3 )

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( -16, -71 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 4 )

[node name="DownButton" type="TouchScreenButton" parent="."]
position = Vector2( -69, -18 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="LeftButton" to="." method="on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="on_LeftButton_released"]
[connection signal="pressed" from="UpButton" to="." method="on_UpButton_pressed"]
[connection signal="released" from="UpButton" to="." method="on_UpButton_released"]
[connection signal="pressed" from="RightButton" to="." method="on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="on_RightButton_released"]
[connection signal="pressed" from="DownButton" to="." method="on_DownButton_pressed"]
[connection signal="released" from="DownButton" to="." method="on_DownButton_released"]
